Delete Product in Product

--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/show-product/product-list/product-list.component.html
@@ -96,7 +96,7 @@
                         <div [ngStyle]="{'display': 'inherit'}">
                             <div (click)="viewProduct(element)" class="kt-pointer"> View | &nbsp;</div>
                             <div (click)="editProduct(element)" class="kt-pointer"> Edit | &nbsp;</div>
-                            <div class="kt-pointer text-danger" (click)="deleteProduct(element.id)">Delete</div>
+                            <div class="kt-pointer text-danger" (click)="deleteProduct(element)">Delete</div>
                         </div>
                     </mat-cell>
                 </ng-container>
